# HLS_phenometrics_maap

./: .gitignore  MODIS_comparison.ipynb  README.md  algorithm-config.yml  build-env.sh  calculate_evi.py  custom_env.yml  download_hls.py  getHLS.sh  hls_download_scenes.py  hls_download_scenes_dps.py  hls_download_scenes_earthdata.py  interactive_pheno_testing.ipynb  maap_run.py  ms_lsp_downloader.py  phenometric_algorithm.py  phenometrics_utils.py  pyproject.toml  register-algorithm.ipynb  run.sh  run_phenometrics.py
